🐛 fix link color in dark mode

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,4 +8,8 @@
     color: #ddd;
     background: #333;
   }
+
+  a {
+    color: #ddd;
+  }
 }
